# sshc

./: .gitignore  Cargo.toml  LICENSE  README.md  sshc.toml
src/: config.rs  data.rs  exec.rs  execution.rs  main.rs  ui.rs  user.rs  util.rs
